--- a/modulo2/projeto-labefy/labefy/package.json
+++ b/modulo2/projeto-labefy/labefy/package.json
@@ -14,6 +14,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
