--- a/modulo3/astromatch/package.json
+++ b/modulo3/astromatch/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tinder-card": "^1.4.5",
     "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.20",
