--- a/modulo3/labex/package.json
+++ b/modulo3/labex/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flexible-sliding-menu": "^0.1.9",
