--- a/modulo3/labex/package.json
+++ b/modulo3/labex/package.json
@@ -25,7 +25,9 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.6",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.23",
     "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
