adicionando novas funcionalidades

--- a/modulo4/sistema-bancario/package.json
+++ b/modulo4/sistema-bancario/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "sistema-bancario",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "Jonatas Felix",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
