--- a/modulo4/sistema-bancario/package.json
+++ b/modulo4/sistema-bancario/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
