separando data do controller

--- a/modulo4/to-do-list/package.json
+++ b/modulo4/to-do-list/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "knex": "^0.95.2",
     "moment": "^2.29.4",
