--- a/modulo5/projeto-lama/tsconfig.json
+++ b/modulo5/projeto-lama/tsconfig.json
@@ -9,7 +9,7 @@
         "noImplicitAny": true,
         "esModuleInterop": true
     },
-    "exclude": [
-        "./tests/*"
-    ]
+    // "exclude": [
+    //     "./tests/*"
+    // ]
 }
