--- a/modulo5/projeto-lama/package.json
+++ b/modulo5/projeto-lama/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
@@ -31,9 +32,11 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   }
